# Agentic-Portfolio

./: .gitignore  AKshare连接测试.py  Q-Macro.py  README.md  init_project.py  pyproject.toml
portfolios/: 2025-03-27_report.txt  2026-03-27_report.txt  2026-03-28_report.txt
reports/: backtest_results.json
scripts/: fetch_etf_data.py  fetch_macro_data.py  generate_mock_etf.py  generate_sample_policy.py  run_monthly_pipeline.py
src/agents/: policy_interpreter.py  report_writer.py  theme_mapper.py
src/core/: backtester.py  macro_regime.py  market_calibration.py  portfolio_builder.py
开发Prompt/: Task0 项目架构.md  Task1 投资策略与代码框架设计.md  Task10 运行与调试.md  Task2 数据层搭建.md  Task3 宏观状态识别模块搭建.md  Task4 ETF初步筛选模块搭建.md  Task5 政策解读模块搭建.md  Task6 ETF主题映射模块搭建.md  Task7 投资组合构建模块解析.md  Task8 报告生成模块解析.md  Task9 回测模块解析.md
