[project]
name = "q-macro"
version = "0.1.0"
description = "基于宏观周期的智能 ETF 配置系统"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.7.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]